Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.6.1
-
Fix Version/s: 5.6.3, 5.7.2, 5.9.0 Beta 2
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:
-
Commits:bff683416c73329eb91bdb0bc282f4022c9fec7e
Description
There is a warning in QDateTimeParser::fieldInfo which is causing application to crash when newing a QTimeEdit.
In Qt version (4.8.4) this works fine.
The issue is hard to reproduce and happens only on one system.
OS: Win Srv 2008 R2 Standard with Service Pack 1, Danish (Denmark) locale format
QDateTimeParser::fieldInfo Internal error 2 (-2 FirstSection -1) QDateTimeParser::fieldInfo Internal error 2 (%d %s %d) Qt5Core.dll!qt_message_print(QtMsgType msgType, const QMessageLogContext & context, const QString & message) Line 1621 C++ Qt5Core.dll!qt_message(QtMsgType msgType, const QMessageLogContext & context, const char *msg, char * ap) Line 276 C++ Qt5Core.dll!QMessageLogger::warning(const char * msg, ...) Line 553 C++ Qt5Core.dll!QDateTimeParser::fieldInfo(int index) Line 1514 C++ Qt5Widgets.dll!QDateTimeEditPrivate::interpret(EmitPolicy ep) Line 2347 C++ Qt5Widgets.dll!QDateTimeEditPrivate::_q_editorCursorPositionChanged(int oldpos, int newpos) Line 2202 C++ Qt5Widgets.dll!QDateTimeEdit::setDisplayFormat(const QString & format) Line 904 C++ Qt5Widgets.dll!QDateTimeEditPrivate::init(const QVariant & var) Line 2404 C++ Qt5Widgets.dll!QTimeEdit::QTimeEdit(QWidget * parent) Line 1538 C++